--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,9 @@
  
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
- 
+
+    --tertiary: 240 4.8% 95.9%;
+
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
  
@@ -50,7 +52,7 @@
  
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
- 
+
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
  
@@ -63,6 +65,27 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+    background: var(--secondary);
+  }
+
+  *::-webkit-scrollbar-track {
+    display: none;
+  }
+  *::-webkit-scrollbar-button{
+    display: none;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(30,30,30);
+    border-radius: 14px;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(50,50,50);
   }
 }
  
